# open-weather-sdk

./: .gitignore  README.md  main.py  pyproject.toml
src/openweather_sdk/: __init__.py  client.py  exceptions.py  http.py  models.py
tests/: conftest.py  test_client.py  test_http_client.py
