[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-sdk-challenge"
version = "0.1.0"
description = "Python SDK for OpenWeatherMap API"
readme = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "EwertonZ", email = "ewertonzvd@gmail.com" }
]

dependencies = [
    "requests>=2.32.5",
    "urllib3>=2.6.3",
]

[project.optional-dependencies]
dev = [
    "build>=1.4.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "twine>=6.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
